--- a/Desafio5.html
+++ b/Desafio5.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="content">
                         <p class="title text--medium">
-                            Com startups mais 'baratas', grandes empresas buscam aquisições
+                            Trabalhando com o Git
                         </p>
                         <div class="info">
                             <p class="text--medium">57 min</p>
