--- a/Desafio5.html
+++ b/Desafio5.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible">
         <meta name="viewport" content="width=device-width, initial-scale 1.0" />
-        <title>StartSE</title>
+        <title>Portfólio Cloger</title>
         <link rel="icon" type="image/x-icon" href="./images/favicon.jpg" />
         <link rel="stylesheet" type="text/CSS" href="./css/style.css" />
         <link rel="stylesheet" type="text/CSS" href="./css/responsive.css" />
