Update Project 2 Description

--- a/Desafio5.html
+++ b/Desafio5.html
@@ -71,6 +71,8 @@
                         <img src="./images/unicornio.jpg" />
                         </div>
                         <div class="content">
+                            <h1>Projeto 1</h1>
+                            <h2>Enviando o código para o GitHub</h2>
                             <p class="title text--medium">
                                 Com startups mais baratas, grandes empresas buscam aquisições
                             </p>
