uptade Project 2 description

--- a/Desafio5.html
+++ b/Desafio5.html
@@ -84,6 +84,8 @@
                         <img src="./images/unicornio.jpg" />
                         </div>
                         <div class="content">
+                            <h1>Projeto 2</h1>
+                            <h2>Exemple do Branch Merge</h2>
                             <p class="title text--medium">
                                 Com startups mais 'baratas', grandes empresas buscam aquisições
                             </p>
