uptade project 2 description v2

--- a/Desafio5.html
+++ b/Desafio5.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="content">
                             <h1>Projeto 2</h1>
-                            <h2>Exemple do Branch Merge</h2>
+                            <h2>//Example do Branch Merge //</h2>
                             <p class="title text--medium">
                                 Com startups mais 'baratas', grandes empresas buscam aquisições
                             </p>
