--- a/Desafio5.html
+++ b/Desafio5.html
@@ -97,6 +97,8 @@
                         <img src="./images/unicornio.jpg" />
                         </div>
                         <div class="content">
+                            <h1>Projeto 2</h1>
+                            <h2>Trabalhando com Rebase</h2>
                             <p class="title text--medium">
                                 Com startups mais 'baratas', grandes empresas buscam aquisições
                             </p>
