--- a/Desafio5.html
+++ b/Desafio5.html
@@ -72,7 +72,7 @@
                         </div>
                         <div class="content">
                             <h1>Projeto 1</h1>
-                            <h2>Trabalhando com o Revert</h2>
+                            <h2>Usando o Stash - Para valer</h2>
                             <p class="title text--medium">
                                 Com startups mais baratas, grandes empresas buscam aquisições
                             </p>
