--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                     <img src="./images/unicornio.jpg" />
                     </div>
                     <div class="content">
+                        <h1>Projeto 1</h1>
+                        <h5>Teste</h5>
                         <p class="title text--medium">
                             Trabalhando com o Git
                         </p>
@@ -72,7 +74,7 @@
                         </div>
                         <div class="content">
                             <h1>Projeto 1</h1>
-                            <h2>Usando o Stash - Para valer</h2>
+                            <h5>Usando o Stash - Para valer</h5>
                             <p class="title text--medium">
                                 Com startups mais baratas, grandes empresas buscam aquisições
                             </p>
@@ -85,7 +87,7 @@
                         </div>
                         <div class="content">
                             <h1>Projeto 2</h1>
-                            <h2>//Example do Branch Merge //</h2>
+                            <h5>//Example do Branch Merge //</h5>
                             <p class="title text--medium">
                                 Com startups mais 'baratas', grandes empresas buscam aquisições
                             </p>
@@ -98,7 +100,7 @@
                         </div>
                         <div class="content">
                             <h1>Projeto 3</h1>
-                            <h2>Trabalhando com Rebase</h2>
+                            <h5>Trabalhando com Rebase</h5>
                             <p class="title text--medium">
                                 Com startups mais 'baratas', grandes empresas buscam aquisições
                             </p>
