--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible">
         <meta name="viewport" content="width=device-width, initial-scale 1.0" />
         <title>Portfólio Cloger</title>
-        <link rel="icon" type="image/x-icon" href="./images/favicon.jpg">
+        <link rel="icon" type="image/x-icon" href="../images/favicon.jpg">
         <link rel="stylesheet" type="text/CSS" href="./css/style.css" />
         <link rel="stylesheet" type="text/CSS" href="./css/responsive.css" />
     </head>
