--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible">
         <meta name="viewport" content="width=device-width, initial-scale 1.0" />
         <title>Portfólio Cloger</title>
-        <link rel="icon" type="image/x-icon" href="../images/favicon.jpg">
+        <link rel="icon" type="image/x-icon" href="./Images/favicon.jpg">
         <link rel="stylesheet" type="text/CSS" href="./css/style.css" />
         <link rel="stylesheet" type="text/CSS" href="./css/responsive.css" />
     </head>
     <body>
         <header>
             <div class="container">
-                <img src="./images/image.png" alt="logo" width=150px>
+                <img src="./Images/image.png" alt="logo" width=150px>
                 <div class = "menu-selection">
                     <div class="container-menu">
                         <input type="checkbox" id="checkbox-menu" />
@@ -52,12 +52,12 @@
                         <input type="submit" placeholder="Enviar" />
                     </form>
                 </div>
-                <img src="./images/projeto.png" alt="">
+                <img src="./Images/projeto.png" alt="">
             </div>
         </main>
         <section class="cards">
                 <div class="card">
-                    <img src="./images/unicornio.jpg" />
+                    <img src="./Images/unicornio.jpg" />
                     </div>
                     <div class="content">
                         <h1>Projeto 1</h1>
@@ -70,7 +70,7 @@
                         </div>
                 </div>
                     <div class="card">
-                        <img src="./images/unicornio.jpg" />
+                        <img src="./Images/unicornio.jpg" />
                         </div>
                         <div class="content">
                             <h1>Projeto 1</h1>
@@ -83,7 +83,7 @@
                             </div>
                     </div>
                     <div class="card">
-                        <img src="./images/unicornio.jpg" />
+                        <img src="./Images/unicornio.jpg" />
                         </div>
                         <div class="content">
                             <h1>Projeto 2</h1>
@@ -96,7 +96,7 @@
                             </div>
                     </div>
                     <div class="card">
-                        <img src="./images/unicornio.jpg" />
+                        <img src="./Images/unicornio.jpg" />
                         </div>
                         <div class="content">
                             <h1>Projeto 3</h1>
